# MaterialX

./: CMakeLists.txt
libraries/bxdf/: standard_surface.mtlx  usd_preview_surface.mtlx
libraries/pbrlib/genmdl/: pbrlib_genmdl_impl.mtlx
libraries/pbrlib/genosl/: mx_dielectric_brdf.osl
libraries/stdlib/: stdlib_defs.mtlx
libraries/stdlib/genglsl/: stdlib_genglsl_impl.mtlx
libraries/stdlib/genmdl/: cm.mdl  stdlib_genmdl_impl.mtlx
libraries/stdlib/genosl/: stdlib_genosl_impl.mtlx
python/MaterialXTest/: genshader.py  main.py
python/Scripts/: genmdl.py
resources/Materials/TestSuite/: _options.mtlx
source/MaterialXFormat/: File.h
source/MaterialXGenGlsl/: GlslShaderGenerator.cpp
source/MaterialXGenMdl/: MdlShaderGenerator.cpp  MdlShaderGenerator.h  MdlSyntax.cpp  MdlSyntax.h
source/MaterialXGenMdl/Nodes/: BlurNodeMdl.cpp  BlurNodeMdl.h  CompoundNodeMdl.cpp  SourceCodeNodeMdl.cpp  SourceCodeNodeMdl.h
source/MaterialXGenOgsFx/: OgsFxShaderGenerator.cpp
source/MaterialXGenOsl/: OslShaderGenerator.cpp
source/MaterialXGenShader/: GenContext.h  ShaderGenerator.cpp  ShaderGenerator.h  ShaderGraph.cpp  ShaderNode.cpp  Syntax.cpp  Syntax.h
source/MaterialXGenShader/Nodes/: BlurNode.cpp  BlurNode.h  ConvolutionNode.cpp  SourceCodeNode.cpp
source/MaterialXTest/: CMakeLists.txt  GenGlsl.h  GenMdl.cpp  GenMdl.h  GenOgsXml.cpp  GenOgsfx.cpp  GenOsl.h  GenShaderUtil.cpp  GenShaderUtil.h
source/MaterialXView/: CMakeLists.txt  Main.cpp  Viewer.cpp  Viewer.h
source/PyMaterialX/: CMakeLists.txt
source/PyMaterialX/PyMaterialXGenShader/: CMakeLists.txt
(+35 files in other folders)
